# Trileaf

./: .gitignore  LICENSE  MANIFEST.in  README.md  install.cmd  install.ps1  install.sh  leafhub.toml  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  setup.ps1  setup.sh  trileaf_cli.py
.github/workflows/: ci.yml
api/: optimizer_api.py
api/static/: app.js  index.html
scripts/: _version.py  app_config.py  check_env.py  chunker.py  detector_interface.py  diag_pipeline.py  eval_new_rules.py  eval_pipeline.py  models_runtime.py  onboarding.py  orchestrator.py  orchestrator_v2.py  post_processor.py  prompt_builder.py  rewrite_config.py  rewrite_provider_cli.py  rule_detector.py  test_local_qwen.py  test_pipeline_timing.py
scripts/download_scripts/: desklib_detector_download.py  mpnet_download.py  qwen3_vl_download.py
scripts/testscripts/: desklib_detector_test.py  mpnet_test.py  qwen3_vl_test.py
static/: app.js  index.html
tests/: conftest.py  test_api.py  test_check_env.py  test_config.py  test_detector_interface.py  test_distribution.py  test_models_runtime.py  test_new_features.py  test_onboarding.py  test_orchestrator.py  test_pipeline_e2e.py  test_post_processor.py  test_prompt_builder.py  test_rewrite_provider_cli.py  test_rule_detector.py  test_trileaf_cli.py
trileaf.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
